add proposal file

--- a/analysis/proposal.ipynb
+++ b/analysis/proposal.ipynb
@@ -6,7 +6,9 @@
    "id": "ad007779-038e-4b6f-a6d6-9ee27824486e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#proposal"
+   ]
   }
  ],
  "metadata": {
