--- a/analysis/apple_quality.ipynb
+++ b/analysis/apple_quality.ipynb
@@ -1,6 +1,255 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8f5fe4c4-7779-4b23-8f99-69300ded346c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#import\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "376598a8-1bf6-4b15-be08-81e5239bf6ec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A_id</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Sweetness</th>\n",
+       "      <th>Crunchiness</th>\n",
+       "      <th>Juiciness</th>\n",
+       "      <th>Ripeness</th>\n",
+       "      <th>Acidity</th>\n",
+       "      <th>Quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-3.970049</td>\n",
+       "      <td>-2.512336</td>\n",
+       "      <td>5.346330</td>\n",
+       "      <td>-1.012009</td>\n",
+       "      <td>1.844900</td>\n",
+       "      <td>0.329840</td>\n",
+       "      <td>-0.491590483</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.195217</td>\n",
+       "      <td>-2.839257</td>\n",
+       "      <td>3.664059</td>\n",
+       "      <td>1.588232</td>\n",
+       "      <td>0.853286</td>\n",
+       "      <td>0.867530</td>\n",
+       "      <td>-0.722809367</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-0.292024</td>\n",
+       "      <td>-1.351282</td>\n",
+       "      <td>-1.738429</td>\n",
+       "      <td>-0.342616</td>\n",
+       "      <td>2.838636</td>\n",
+       "      <td>-0.038033</td>\n",
+       "      <td>2.621636473</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-0.657196</td>\n",
+       "      <td>-2.271627</td>\n",
+       "      <td>1.324874</td>\n",
+       "      <td>-0.097875</td>\n",
+       "      <td>3.637970</td>\n",
+       "      <td>-3.413761</td>\n",
+       "      <td>0.790723217</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.364217</td>\n",
+       "      <td>-1.296612</td>\n",
+       "      <td>-0.384658</td>\n",
+       "      <td>-0.553006</td>\n",
+       "      <td>3.030874</td>\n",
+       "      <td>-1.303849</td>\n",
+       "      <td>0.501984036</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3996</th>\n",
+       "      <td>3996.0</td>\n",
+       "      <td>-0.293118</td>\n",
+       "      <td>1.949253</td>\n",
+       "      <td>-0.204020</td>\n",
+       "      <td>-0.640196</td>\n",
+       "      <td>0.024523</td>\n",
+       "      <td>-1.087900</td>\n",
+       "      <td>1.854235285</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3997</th>\n",
+       "      <td>3997.0</td>\n",
+       "      <td>-2.634515</td>\n",
+       "      <td>-2.138247</td>\n",
+       "      <td>-2.440461</td>\n",
+       "      <td>0.657223</td>\n",
+       "      <td>2.199709</td>\n",
+       "      <td>4.763859</td>\n",
+       "      <td>-1.334611391</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3998</th>\n",
+       "      <td>3998.0</td>\n",
+       "      <td>-4.008004</td>\n",
+       "      <td>-1.779337</td>\n",
+       "      <td>2.366397</td>\n",
+       "      <td>-0.200329</td>\n",
+       "      <td>2.161435</td>\n",
+       "      <td>0.214488</td>\n",
+       "      <td>-2.229719806</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3999</th>\n",
+       "      <td>3999.0</td>\n",
+       "      <td>0.278540</td>\n",
+       "      <td>-1.715505</td>\n",
+       "      <td>0.121217</td>\n",
+       "      <td>-1.154075</td>\n",
+       "      <td>1.266677</td>\n",
+       "      <td>-0.776571</td>\n",
+       "      <td>1.599796456</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4000</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Created_by_Nidula_Elgiriyewithana</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4001 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        A_id      Size    Weight  Sweetness  Crunchiness  Juiciness  Ripeness  \\\n",
+       "0        0.0 -3.970049 -2.512336   5.346330    -1.012009   1.844900  0.329840   \n",
+       "1        1.0 -1.195217 -2.839257   3.664059     1.588232   0.853286  0.867530   \n",
+       "2        2.0 -0.292024 -1.351282  -1.738429    -0.342616   2.838636 -0.038033   \n",
+       "3        3.0 -0.657196 -2.271627   1.324874    -0.097875   3.637970 -3.413761   \n",
+       "4        4.0  1.364217 -1.296612  -0.384658    -0.553006   3.030874 -1.303849   \n",
+       "...      ...       ...       ...        ...          ...        ...       ...   \n",
+       "3996  3996.0 -0.293118  1.949253  -0.204020    -0.640196   0.024523 -1.087900   \n",
+       "3997  3997.0 -2.634515 -2.138247  -2.440461     0.657223   2.199709  4.763859   \n",
+       "3998  3998.0 -4.008004 -1.779337   2.366397    -0.200329   2.161435  0.214488   \n",
+       "3999  3999.0  0.278540 -1.715505   0.121217    -1.154075   1.266677 -0.776571   \n",
+       "4000     NaN       NaN       NaN        NaN          NaN        NaN       NaN   \n",
+       "\n",
+       "                                Acidity Quality  \n",
+       "0                          -0.491590483    good  \n",
+       "1                          -0.722809367    good  \n",
+       "2                           2.621636473     bad  \n",
+       "3                           0.790723217    good  \n",
+       "4                           0.501984036    good  \n",
+       "...                                 ...     ...  \n",
+       "3996                        1.854235285    good  \n",
+       "3997                       -1.334611391     bad  \n",
+       "3998                       -2.229719806    good  \n",
+       "3999                        1.599796456    good  \n",
+       "4000  Created_by_Nidula_Elgiriyewithana     NaN  \n",
+       "\n",
+       "[4001 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"../data/apple/apple_quality.csv\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
