--- a/analysis/proposal.ipynb
+++ b/analysis/proposal.ipynb
@@ -1,14 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d7bcaf21-03a6-42a1-a64f-e9715b0ad048",
+   "metadata": {},
+   "source": [
+    "Proposal\n",
+    "\n",
+    "the number of subsrcibers by the number of views, categories\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad007779-038e-4b6f-a6d6-9ee27824486e",
+   "id": "1887099c-ba0a-4e47-a9a8-18fee1490793",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#proposal"
-   ]
+   "source": []
   }
  ],
  "metadata": {
