add proposal on heart disease

--- a/analysis/proposal.ipynb
+++ b/analysis/proposal.ipynb
@@ -5,19 +5,43 @@
    "id": "d7bcaf21-03a6-42a1-a64f-e9715b0ad048",
    "metadata": {},
    "source": [
-    "Proposal\n",
-    "\n",
-    "the number of subsrcibers by the number of views, categories\n",
+    "# Group"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a60dd192-fa5b-4ebc-9318-6f5002aa8bd2",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Intoduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ad84c50-fdde-4b55-a88c-756de57ddd3d",
+   "metadata": {},
+   "source": [
+    "### Methods\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1887099c-ba0a-4e47-a9a8-18fee1490793",
+   "id": "efaba619-b19f-4a4d-b48e-91534eab3fa8",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "596b9f02-4862-439a-a05d-9613d5791364",
+   "metadata": {},
+   "source": [
+    "## Expected outcomes and significance\n"
+   ]
   }
  ],
  "metadata": {
